# fifteen

./: .gitignore  CMakeLists.txt  Game.qml  LICENSE  Main.qml  MainMenu.qml  README.md  Score.qml  board.h  board_controller.h  board_factory.h  cell.h  cell_factory.h  cli.cpp  main.cpp  score.csv  score_model.h  scoreboard.h
include/: board.h  board_controller.h  cell.h  game.h  game_creators.h  game_rules.h  game_rules_creators.h  score_model.h  scoreboard.h  structs.h
qml/: Game.qml  MainMenu.qml  Score.qml
source/: board.cpp  game_creators.cpp  game_rules_creators.cpp
